<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.6.RELEASE</version>
		<relativePath/>
	</parent>

	<packaging>pom</packaging>
	<groupId>com.sm.mastercard.send</groupId>
	<artifactId>ap-p2p-sm-payment-execution</artifactId>
	<version>1.1.3</version>
	<name>ap-p2p-sm-payment-execution</name>
	<description>SpringBoot project for P2P MasterCard Send Service
	</description>

	<modules>
		<module>boot</module>
		<module>interfaces</module>
		<module>assembly</module>
    	<module>itests</module>
  </modules>
  
	<properties>
		<java.version>11</java.version>
		<maven.test.skip>false</maven.test.skip>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		
		<ap.core.platform-version>1.1.6</ap.core.platform-version>
		<javax.validation.validation-api.version>2.0.1.Final</javax.validation.validation-api.version>
		<javax.servlet.servlet-api.version>4.0.1</javax.servlet.servlet-api.version>
		
		<spring-boot.version>2.2.6.RELEASE</spring-boot.version>
		<spring.version>5.2.5.RELEASE</spring.version>
		<spring-doc.open-api.version>1.1.49</spring-doc.open-api.version>
		<swagger-codegen-maven-plugin.version>2.2.2</swagger-codegen-maven-plugin.version>
		<io.spring-fox.swagger.version>2.9.2</io.spring-fox.swagger.version>
		<io.swagger.annotations.version>1.5.20</io.swagger.annotations.version>
		
		<json.assert.version>1.5.0</json.assert.version>
		<rest-assured.version>4.2.0</rest-assured.version>
		<org.hamcrest.hamcrest-core.version>2.2</org.hamcrest.hamcrest-core.version>
		<io.cucumber.version>4.2.3</io.cucumber.version>
		<org.apache.httpcomponents.httpclient.version>4.5.6</org.apache.httpcomponents.httpclient.version>
		
		<org.mockito.version>2.22.0</org.mockito.version>
		<org.powermock.version>2.0.2</org.powermock.version>
		<jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
		<argLine>-Xmx2048m</argLine>
		<sonar.jacoco.reportPath>${project.build.directory}/ap-p2p-sm-payment-execution-jacoco-ut.exec</sonar.jacoco.reportPath>
		<sonar.jacoco.itReportPath>${project.build.directory}/ap-p2p-sm-payment-execution-jacoco-it.exec</sonar.jacoco.itReportPath>
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
		<sonar.language>java</sonar.language>
		<sonar.java.source>1.8</sonar.java.source>
		<rest-assured.version>4.2.0</rest-assured.version>
		
		<maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
		<maven-clean-plugin.version>2.6.1</maven-clean-plugin.version>
		<maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
		<maven-surefire-report-plugin.version>2.16</maven-surefire-report-plugin.version>
		<serenity-maven-plugin.version>1.1.42</serenity-maven-plugin.version>
		
	</properties>

	<dependencies>
		<dependency>
			<artifactId>ap-core-platform-webservices</artifactId>
			<groupId>com.mastercard.ap.core.platform.webservices</groupId>
			<version>${ap.core.platform-version}</version>
			<exclusions>
				<exclusion>
					<groupId>javax.servlet</groupId>
					<artifactId>servlet-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.mastercard.ap.core.platform.logging</groupId>
			<artifactId>ap-core-platform-logging</artifactId>
			<version>${ap.core.platform-version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-integration</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.integration</groupId>
			<artifactId>spring-integration-http</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-core</artifactId>
			<version>${spring-doc.open-api.version}</version>
			<exclusions>
				<exclusion>
					<groupId>io.github.classgraph</groupId>
					<artifactId>classgraph</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>${spring-doc.open-api.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			</dependency>
		<dependency>
			<groupId>org.skyscreamer</groupId>
			<artifactId>jsonassert</artifactId>
			</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>${org.powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito2</artifactId>
			<version>${org.powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger2</artifactId>
            <version>${io.spring-fox.swagger.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>${io.spring-fox.swagger.version}</version>
		</dependency>
		<dependency>
            <groupId>io.swagger</groupId>
            <artifactId>swagger-annotations</artifactId>
            <version>${io.swagger.annotations.version}</version>
        </dependency>
		<dependency>
			<groupId>com.mastercard.developer</groupId>
			<artifactId>oauth1-signer</artifactId>
			<version>1.2.4</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>pre-test</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>post-test</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<propertyName>jacoco.agent.argLine</propertyName>
					<destFile>${sonar.jacoco.itReportPath}</destFile>
					<append>true</append>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>${jacoco.agent.argLine},destfile=${sonar.jacoco.reportPath}
						-Xmx1g -XX:MaxPermSize=512m</argLine>
					<includes>
						<include>**/*Test.java</include>
					</includes>
					<excludes>
						<exclude>**/stories/*.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco-maven-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<argLine>${jacoco.agent.argLine},destfile=${sonar.jacoco.itReportPath}
						-Xmx1g -XX:MaxPermSize=512m</argLine>
					<includes>
						<include>**/stories/**/*.java</include>
					</includes>
				</configuration>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>verify</goal>
							<goal>integration-test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>net.serenity-bdd.maven.plugins</groupId>
				<artifactId>serenity-maven-plugin</artifactId>
				<version>1.1.42</version>
				<executions>
					<execution>
						<id>serenity-reports</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>aggregate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>
	<profiles>
		<profile>
			<id>sonar</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<modules>
				<module>boot</module>
				<module>interfaces</module>
				<module>assembly</module>
				<module>itests</module>
			</modules>
			<build>
				<plugins>
					<plugin>
						<groupId>net.serenity-bdd.maven.plugins</groupId>
						<artifactId>serenity-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>serenity-reports</id>
								<phase>post-integration-test</phase>
								<goals>
									<goal>aggregate</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.19.1</version>
						<configuration>
							<argLine>${jacoco.agent.argLine},destfile=${sonar.jacoco.reportPath}
								-Xmx1g -XX:MaxPermSize=512m</argLine>
							<includes>
								<include>**/*Test.java</include>
							</includes>
							<excludes>
								<exclude>**/stories/*.java</exclude>
							</excludes>
						</configuration>
					</plugin>
				</plugins>

			</build>
			<reporting>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-report-plugin</artifactId>
						<version>2.16</version>
						<reportSets>
							<reportSet>
								<inherited>true</inherited>
								<id>integration-tests</id>
								<reports>
									<report>report-only</report>
									<report>failsafe-report-only</report>
								</reports>
							</reportSet>
						</reportSets>
						<configuration>

							<outputDirectory>${project.build.directory}/site</outputDirectory>
							<reportsDirectories>
								<reportsDirectories>${project.build.directory}/site/surefire-reports</reportsDirectories>
							</reportsDirectories>
						</configuration>

					</plugin>
				</plugins>
			</reporting>
		</profile>
	</profiles>

	<distributionManagement>
		<snapshotRepository>
			<id>snapshots</id>
			<name>APCore Nexus snapshot repository</name>
			<url>https://nexus-rm.vocalink.co.uk/nexus/repository/zapp-snapshots/
			</url>
		</snapshotRepository>
		<repository>
			<id>releases</id>
			<name>APCore Nexus release repository</name>
			<url>https://nexus-rm.vocalink.co.uk/nexus/repository/zapp-releases/
			</url>
		</repository>
	</distributionManagement>

  
</project>